wandb/run-20230321_094830-qgzmymaf/files/output.log
Done.
Setting up the random seed for reproducibility...
Done.
class_name:  OracleTrainer
Traceback (most recent call last):
  File "<frozen importlib._bootstrap>", line 1007, in _find_and_load
  File "<frozen importlib._bootstrap>", line 986, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 680, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 850, in exec_module
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/home/utente/Scrivania/PROVA/LADD/src/federated/__init__.py", line 2, in <module>
    from .servers import OracleServer, FtdaNoaggrServer, FtdaServer, McdServer, FdaServer, FdaInvServer, LADDServer
  File "/home/utente/Scrivania/PROVA/LADD/src/federated/servers/__init__.py", line 1, in <module>
    from .oracle_server import OracleServer
  File "/home/utente/Scrivania/PROVA/LADD/src/federated/servers/oracle_server.py", line 108
    if self.format_client = "RGB":
                          ^
SyntaxError: invalid syntax